# validator-local

./: AGENTS.md  README.md  app.py  pyproject.toml
validator/: api.py  cli.py
validator-local/validator/checks/: boundaries.py  test_sh.py
validator-local/validator/core/: artifacts.py  docker.py  runner.py
validator-local/validator/reports/: json_report.py
validator/checks/: encoding.py  policy.py  preflight.py  sizes.py
validator/core/: sandbox.py  subprocess.py
validator/reports/: models.py
