[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "validator-local"
version = "0.1.0"
description = "Hermetic folder-first validator for platform-style Python problems (triad + preflight + bundles)."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "validator-local"}]
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
]

[project.scripts]
validator = "validator.cli:main"

[tool.setuptools]
packages = ["validator", "validator.core", "validator.checks", "validator.reports"]
